"""
Build supporting tools.

The tools subpackage is used to define build rules and configurations for tools
used throughout the repository. Firstparty tools not required for build support
should live elsewhere.

Of special note is that we're using the `bazel_env.bzl` tool to re-export tools
used under Bazel as a `bin/` tree which can be added to the `$PATH`. The
included `.envrc` automates this for you.

"""
load("@bazel_env.bzl", "bazel_env")
load("@multitool//:tools.bzl", MULTITOOL_TOOLS = "TOOLS")
{% if go %}
load("@gazelle//:go_tools.bzl", "GO_TOOLS")
{% endif %}

package(default_visibility = ["//visibility:public"])


{% if javascript %}
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")
{% endif %}

bazel_env(
    name = "bazel_env",
    toolchains = {
{% if java %}
        "jdk": "@rules_java//toolchains:current_host_java_runtime",
{% endif %}
{% if javascript %}
        "nodejs": "@nodejs_toolchains//:resolved_toolchain",
        "prettier": "//tools/format:prettier",
{% endif %}
    },
    tools = {
        # Mapping from tool binary name ($PATH entry) to Bazel label
{% if lint %}
        "buildifier": "@buildifier_prebuilt//:buildifier",
        "format": "//tools/format:format",
{% endif %}
{% if rust %}
        "cargo": "@rules_rust//tools/upstream_wrapper:cargo",
{% endif %}
{% if python %}
        "uv": "@uv//:uv",
{% endif %}
{% if go %}
        "go": "@rules_go//go",
{% endif %}
{% if java %}
        "jar": "$(JAVABASE)/bin/jar",
        "java": "$(JAVA)",
{% endif %}
{% if javascript %}
        "node": "$(NODE_PATH)",
        "npm": "$(NPM_PATH)",
        "pnpm": "@pnpm",
{% endif %}
{% if ruby %}
        "bundle": "@ruby//:bundle",
        "gem": "@ruby//:gem",
        "ruby": "@ruby",
{% endif %}
    } | MULTITOOL_TOOLS {% if go %} | GO_TOOLS {% endif %},
)

{% if proto and ruby %}
load("@rules_ruby//ruby:defs.bzl", "rb_binary")

rb_binary(
    name = "grpc_tools_ruby_protoc_plugin",
    main = "@bundle//bin:grpc_tools_ruby_protoc_plugin",
    deps = ["@bundle"],
)
{% endif %}
