load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
{%- if oci %}
load("//bazel/oci:go_image.bzl", "go_image")
{%- endif %}

# This is a curated sample with hand-picked target names (hello/hello_test);
# gazelle would otherwise add its own go_lib/go/go_test targets here. New code
# elsewhere is still gazelle-managed (see the user story).
# gazelle:ignore

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "example.com/{{ project_snake }}/hello/go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_test",
    srcs = ["hello_test.go"],
    embed = [":hello_lib"],
)
{% if oci %}

# OCI image for the sample binary. `go_image` also defines the `:image_push`
# (an `oci_push`), which `aspect delivery` builds + pushes.
go_image(
    name = "image",
    binary = ":hello",
)
{% endif %}
