load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

java_library(
    name = "hello_lib",
    srcs = ["Hello.java"],
    visibility = ["//visibility:private"],
)

java_binary(
    name = "hello",
    main_class = "hello.Hello",
    runtime_deps = [":hello_lib"],
    visibility = ["//visibility:public"],
)

java_test(
    name = "hello_test",
    srcs = ["HelloTest.java"],
    test_class = "hello.HelloTest",
    deps = [
        ":hello_lib",
        "@maven//:junit_junit",
    ],
)
