load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("//tools/pytest:defs.bzl", "py_test")

py_binary(
    name = "hello",
    srcs = ["hello.py"],
    visibility = ["//:__subpackages__"],
    deps = [":py"],
)

py_library(
    name = "py",
    srcs = [
        "greet.py",
        "hello.py",
    ],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "hello_test",
    srcs = ["hello_test.py"],
    deps = [":py"],
)
