load("@rules_ruby//ruby:defs.bzl", "rb_binary", "rb_test")

rb_binary(
    name = "hello",
    srcs = ["hello.rb"],
    main = "hello.rb",
    visibility = ["//visibility:public"],
)

rb_test(
    name = "hello_test",
    srcs = [
        "hello.rb",
        "hello_test.rb",
    ],
    main = "hello_test.rb",
)
