"""BUILD definition for the formatter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
{{- if .Computed.javascript }}
load("@npm//:prettier/package_json.bzl", prettier = "bin")
{{- end }}

package(default_visibility = ["//:__subpackages__"])

{{ if .Computed.javascript -}}
prettier.prettier_binary(
    name = "prettier",
    env = {"BAZEL_BINDIR": "."},
)

{{ end -}}
format_multirun(
    name = "format",
{{- if .Computed.go }}
    go = "@aspect_rules_lint//format:gofumpt",
{{- end }}
{{- if .Computed.javascript }}
    javascript = ":prettier",
{{- end }}
{{- if .Computed.python }}
    python = "@aspect_rules_lint//format:ruff",
{{- end }}
    starlark = "@buildifier_prebuilt//:buildifier",
)
